# obs-studio-aster

UI/: window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  window-basic-main.cpp  window-basic-main.hpp
UI/data/locale/: en-US.ini  zh-CN.ini
UI/forms/: OBSBasic.ui
plugins/: CMakeLists.txt
plugins/hengxin-flv-outputs/: CMakeLists.txt  flv-meta-data.c  flv-mux-data.c  flv-mux.h  flv-output-connect.cpp  flv-stream.c  flv-stream.h  hengxin-flv-outputs.c
plugins/hengxin-flv-outputs/config/: OBSService.xml  readme.txt
plugins/hengxin-flv-outputs/data/locale/: en-US.ini  zh-CN.ini
plugins/hengxin_ue4capture/: CMakeLists.txt  ImageClient.cpp  ImageClient.h  ImageMessage.hpp  hengxin_ue4capture.c
